--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Huy_Retrofit_Practice</string>
+    <string name="postListTitle">Post List</string>
 </resources>
