--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Huy App</string>
     <string name="postListTitle">Post List</string>
     <string name="new_post">New post</string>
+    <string name="save_post">Save post</string>
 </resources>
